--- a/README.org
+++ b/README.org
@@ -1,9 +1,6 @@
 
 * Dotfiles for personal use
-*DO NOT PUBLISH THIS REPOSITORY IN PUBLIC GIT HOSTING*
-
-Really, don't do this. This may end so bad.
-** Usage
+** Install
 #+BEGIN_SRC shell
 stow -d directory 
 #+END_SRC
